--- a/package.json
+++ b/package.json
@@ -22,10 +22,13 @@
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.424.0",
     "next": "14.2.5",
+    "nextjs-toploader": "^1.6.12",
     "react": "^18",
     "react-audio-player-component": "^1.2.4",
+    "react-audio-voice-recorder": "^2.2.0",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
+    "react-media-recorder": "^1.7.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7"
   },
