--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
+    "@react-oauth/google": "^0.12.1",
     "@tanstack/react-table": "^8.19.3",
-    "axios": "^1.7.3",
+    "axios": "^1.7.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "framer-motion": "^11.3.27",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.424.0",
     "next": "14.2.5",
@@ -28,7 +30,8 @@
     "react-audio-voice-recorder": "^2.2.0",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
-    "react-media-recorder": "^1.7.0",
+    "react-media-recorder": "^1.6.5",
+    "recharts": "^2.12.7",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7"
   },
