--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@hookform/resolvers": "^3.9.0",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.1",
+    "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-context-menu": "^2.2.1",
     "@radix-ui/react-dialog": "^1.1.1",
@@ -32,7 +33,16 @@
     "@react-oauth/google": "^0.12.1",
     "@reduxjs/toolkit": "^2.2.7",
     "@remixicon/react": "^4.2.0",
+    "@remotion/bundler": "^4.0.211",
+    "@remotion/cli": "^4.0.211",
+    "@remotion/google-fonts": "^4.0.211",
+    "@remotion/lambda": "^4.0.211",
+    "@remotion/paths": "^4.0.211",
+    "@remotion/player": "^4.0.211",
+    "@remotion/renderer": "^4.0.211",
+    "@remotion/shapes": "^4.0.211",
     "@tanstack/react-table": "^8.19.3",
+    "audio-metadata": "^0.3.0",
     "axios": "^1.7.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -49,11 +59,12 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
-    "react-hook-form": "^7.52.2",
+    "react-hook-form": "^7.53.0",
     "react-media-recorder": "^1.6.5",
     "react-query": "^3.39.3",
     "react-redux": "^9.1.2",
     "recharts": "^2.12.7",
+    "remotion": "^4.0.211",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
