--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "docx": "^8.5.0",
     "framer-motion": "^11.5.6",
     "jwt-decode": "^4.0.0",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.424.0",
     "next": "14.2.5",
     "next-themes": "^0.3.0",
@@ -76,6 +77,7 @@
     "react-query": "^3.39.3",
     "react-redux": "^9.1.2",
     "react-resizable-panels": "^2.1.4",
+    "react-use": "^17.5.1",
     "recharts": "^2.12.7",
     "remotion": "^4.0.211",
     "sonner": "^1.5.0",
@@ -85,6 +87,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.13",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
